--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "blueprint.app",
   "module": "index.ts",
-  "type": "module",
-  "private": true,
   "devDependencies": {
     "@types/bun": "latest",
     "live-server": "^1.2.2"
   },
-  "peerDependencies": {
-    "typescript": "^5"
-  },
+  "private": true,
   "scripts": {
     "dev": "live-server --port=3000 --open=index.html --watch=index.html"
+  },
+  "type": "module",
+  "dependencies": {
+    "typescript": "5.6.3"
   }
 }
